edit html (index and user)

--- a/user.html
+++ b/user.html
@@ -22,6 +22,17 @@
       </menu>
       <main>
         <div class="container">
+          <div class="user-box">
+            <img src="images/user-image.png" alt="userImg"></img>
+            <p>user name</p>
+            <div class="follow-box">
+              <span class="following">フォロー<i class="follow-num">100</i></span>
+              <span class="follower">フォロワー<i class="follow-num">100</i></span>
+            </div>
+            <div class="description">
+              ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。
+            </div>
+          </div>
           <div class="contents">
             <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
             <ul>
