--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>animal-app</h1>
-        <i class="fas fa-sign-in-alt"></i>
+        <h1 class="title-box">title</h1>
+        <img src="images/login.png"></img>
       </header>
       <menu>
         <ul>
@@ -24,80 +24,80 @@
         <div class="container">
           <div class="contents">
             <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
-            <ul>
-              <li><i class="fas fa-retweet"></i></li>
-              <li><i class="far fa-heart"></i></li>
-              <li><img src="images/comment.png"></li>
-              <li><i class="fas fa-ellipsis-h"></i></li>
-            </ul>
-            <span>ここにテキストが入ります</span>
-            <div class="tag-box">
-              <span class="tag"><i class="fas fa-hashtag"></i>タグ名</span>
+            <div class="icons clearfix">
+              <span><img src="images/retweet.png" alt="retweet"></span>
+              <span><img src="images/heart.png" alt="heart"></img></span>
+              <span><img src="images/comment.png"></span>
+              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
+            </div>
+            <div class="contents__text">ここにテキストが入ります</div>
+            <div class="contents__tag-box">
+              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
             </div>
           </div>
           <div class="contents">
             <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
-            <ul>
-              <li><i class="fas fa-retweet"></i></li>
-              <li><i class="far fa-heart"></i></li>
-              <li><i class="far fa-comment"></i></li>
-              <li><i class="fas fa-ellipsis-h"></i></li>
-            </ul>
-            <span>ここにテキストが入ります</span>
-            <div class="tag-box">
-              <span class="tag"><i class="fas fa-hashtag"></i>タグ名</span>
+            <div class="icons clearfix">
+              <span><img src="images/retweet.png" alt="retweet"></span>
+              <span><img src="images/heart.png" alt="heart"></img></span>
+              <span><img src="images/comment.png"></span>
+              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
             </div>
-          </div>
-          <div class="contents">
-            <a href="show.html"><img src="images/cat.jpg" alt="image" width="100%"></a>
-            <ul>
-              <li><i class="fas fa-retweet"></i></li>
-              <li><i class="far fa-heart"></i></li>
-              <li><i class="far fa-comment"></i></li>
-              <li><i class="fas fa-ellipsis-h"></i></li>
-            </ul>
-            <span>ここにテキストが入ります</span>
-            <div class="tag-box">
-              <span class="tag"><i class="fas fa-hashtag"></i>タグ名</span>
+            <div class="contents__text">ここにテキストが入ります</div>
+            <div class="contents__tag-box">
+              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
             </div>
           </div>
           <div class="contents">
             <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
-            <ul>
-              <li><i class="fas fa-retweet"></i></li>
-              <li><i class="far fa-heart"></i></li>
-              <li><img src="images/comment.png"></li>
-              <li><i class="fas fa-ellipsis-h"></i></li>
-            </ul>
-            <span>ここにテキストが入ります</span>
-            <div class="tag-box">
-              <span class="tag"><i class="fas fa-hashtag"></i>タグ名</span>
+            <div class="icons clearfix">
+              <span><img src="images/retweet.png" alt="retweet"></span>
+              <span><img src="images/heart.png" alt="heart"></img></span>
+              <span><img src="images/comment.png"></span>
+              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
+            </div>
+            <div class="contents__text">ここにテキストが入ります</div>
+            <div class="contents__tag-box">
+              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
             </div>
           </div>
           <div class="contents">
             <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
-            <ul>
-              <li><i class="fas fa-retweet"></i></li>
-              <li><i class="far fa-heart"></i></li>
-              <li><i class="far fa-comment"></i></li>
-              <li><i class="fas fa-ellipsis-h"></i></li>
-            </ul>
-            <span>ここにテキストが入ります</span>
-            <div class="tag-box">
-              <span class="tag"><i class="fas fa-hashtag"></i>タグ名</span>
+            <div class="icons clearfix">
+              <span><img src="images/retweet.png" alt="retweet"></span>
+              <span><img src="images/heart.png" alt="heart"></img></span>
+              <span><img src="images/comment.png"></span>
+              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
+            </div>
+            <div class="contents__text">ここにテキストが入ります</div>
+            <div class="contents__tag-box">
+              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
             </div>
           </div>
           <div class="contents">
-            <a href="show.html"><img src="images/cat.jpg" alt="image" width="100%"></a>
-            <ul>
-              <li><i class="fas fa-retweet"></i></li>
-              <li><i class="far fa-heart"></i></li>
-              <li><i class="far fa-comment"></i></li>
-              <li><i class="fas fa-ellipsis-h"></i></li>
-            </ul>
-            <span>ここにテキストが入ります</span>
-            <div class="tag-box">
-              <span class="tag"><i class="fas fa-hashtag"></i>タグ名</span>
+            <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
+            <div class="icons clearfix">
+              <span><img src="images/retweet.png" alt="retweet"></span>
+              <span><img src="images/heart.png" alt="heart"></img></span>
+              <span><img src="images/comment.png"></span>
+              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
+            </div>
+            <div class="contents__text">ここにテキストが入ります</div>
+            <div class="contents__tag-box">
+              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
+            </div>
+          </div>
+          <div class="contents">
+            <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
+            <div class="icons clearfix">
+              <span><img src="images/retweet.png" alt="retweet"></span>
+              <span><img src="images/heart.png" alt="heart"></img></span>
+              <span><img src="images/comment.png"></span>
+              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
+            </div>
+            <div class="contents__text">ここにテキストが入ります</div>
+            <div class="contents__tag-box">
+              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
             </div>
           </div>
         </div>
