edit header html/scss

--- a/show.html
+++ b/show.html
@@ -10,8 +10,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>animal-app</h1>
-        <i class="fas fa-sign-in-alt"></i>
+        <div><img src="images/camera.png" alt="camera" class="header-image"></div>
+        <h1 class="title-box">title</h1>
+        <div><img src="images/post.png" class="header-image"></div>
       </header>
       <menu>
         <ul>
