--- a/toppage.html
+++ b/toppage.html
@@ -10,9 +10,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <div><img src="images/camera.png" alt="camera" class="header-image"></div>
+        <div class="left-box"></div>
         <h1 class="title-box">title</h1>
-        <div><img src="images/post.png" class="header-image"></div>
+        <div class="right-box"><img src="images/login.png" class="header-image"></img></div>
       </header>
       <menu>
         <ul>
@@ -23,15 +23,43 @@
       </menu>
       <main>
         <div class="container">
-          <div class="user-box">
-            <img src="images/user-image.png" alt="userImg"></img>
-            <p>user name</p>
-            <div class="follow-box">
-              <span class="following">フォロー<i class="follow-num">100</i></span>
-              <span class="follower">フォロワー<i class="follow-num">100</i></span>
+          <div class="contents">
+            <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
+            <div class="icons clearfix">
+              <span><img src="images/retweet.png" alt="retweet"></span>
+              <span><img src="images/heart.png" alt="heart"></img></span>
+              <span><img src="images/comment.png"></span>
+              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
             </div>
-            <div class="description">
-              ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。
+            <div class="contents__text">ここにテキストが入ります</div>
+            <div class="contents__tag-box">
+              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
+            </div>
+          </div>
+          <div class="contents">
+            <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
+            <div class="icons clearfix">
+              <span><img src="images/retweet.png" alt="retweet"></span>
+              <span><img src="images/heart.png" alt="heart"></img></span>
+              <span><img src="images/comment.png"></span>
+              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
+            </div>
+            <div class="contents__text">ここにテキストが入ります</div>
+            <div class="contents__tag-box">
+              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
+            </div>
+          </div>
+          <div class="contents">
+            <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
+            <div class="icons clearfix">
+              <span><img src="images/retweet.png" alt="retweet"></span>
+              <span><img src="images/heart.png" alt="heart"></img></span>
+              <span><img src="images/comment.png"></span>
+              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
+            </div>
+            <div class="contents__text">ここにテキストが入ります</div>
+            <div class="contents__tag-box">
+              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
             </div>
           </div>
           <div class="contents">
