--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <div class="wrapper">
       <header>
+        <div><img src="images/camera.png" alt="camera" class="header-image"></div>
         <h1 class="title-box">title</h1>
-        <img src="images/login.png"></img>
+        <div><img src="images/post.png" class="header-image"></div>
       </header>
       <menu>
         <ul>
