edit user-page scss(sp)

--- a/user.html
+++ b/user.html
@@ -24,8 +24,8 @@
       <main>
         <div class="container">
           <div class="user-box">
-            <img src="images/user-image.png" alt="userImg"></img>
-            <p>user name</p>
+            <div class="user-box__image"><img src="images/user-image.png" alt="userImg"></img></div>
+            <p class="user-box__username">user name</p>
             <div class="follow-box">
               <span class="following">フォロー<i class="follow-num">100</i></span>
               <span class="follower">フォロワー<i class="follow-num">100</i></span>
