edit html/scss "user-box" TB

--- a/user.html
+++ b/user.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>animal app</title>
+    <link rel="stylesheet" href="stylesheets/normalize.css"/>
     <link rel="stylesheet" href="stylesheets/style.css"/>
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
@@ -25,13 +26,18 @@
         <div class="container">
           <div class="user-box">
             <div class="user-box__image"><img src="images/user-image.png" alt="userImg"></img></div>
-            <p class="user-box__username">user name</p>
-            <div class="follow-box">
-              <span class="following">フォロー<i class="follow-num">100</i></span>
-              <span class="follower">フォロワー<i class="follow-num">100</i></span>
-            </div>
-            <div class="description">
-              ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。
+            <div class="user-box__lower">
+              <div class="user-box__first-row clearfix">
+                <span class="user-box__first-row__username">user name</span>
+                <img src="images/cog.png" alt="cog" class="user-box__first-row__cog">
+              </div>
+              <div class="follow-box">
+                <span class="following">フォロー<i class="follow-num">100</i></span>
+                <span class="follower">フォロワー<i class="follow-num">100</i></span>
+              </div>
+              <div class="description">
+                ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。ここに自己紹介文が入ります。
+              </div>
             </div>
           </div>
           <div class="contents">
