--- a/show.html
+++ b/show.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>animal app</title>
+    <link rel="stylesheet" href="stylesheets/normalize.css"/>
     <link rel="stylesheet" href="stylesheets/style.css"/>
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
