--- a/toppage.html
+++ b/toppage.html
@@ -23,7 +23,7 @@
         </ul>
       </menu>
       <main>
-        <div class="container">
+        <div class="container contents-wrapper">
           <div class="contents">
             <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
             <div class="icons clearfix">
