--- a/user.html
+++ b/user.html
@@ -40,44 +40,46 @@
               </div>
             </div>
           </div>
-          <div class="contents">
-            <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
-            <div class="icons clearfix">
-              <span><img src="images/retweet.png" alt="retweet"></span>
-              <span><img src="images/heart.png" alt="heart"></img></span>
-              <span><img src="images/comment.png"></span>
-              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
-            </div>
-            <div class="contents__text">ここにテキストが入ります</div>
-            <div class="contents__tag-box">
-              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
-            </div>
+          <div class="contents-wrapper">
+            <div class="contents">
+              <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
+              <div class="icons clearfix">
+                <span><img src="images/retweet.png" alt="retweet"></span>
+                <span><img src="images/heart.png" alt="heart"></img></span>
+                <span><img src="images/comment.png"></span>
+                <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
+              </div>
+              <div class="contents__text">ここにテキストが入ります</div>
+              <div class="contents__tag-box">
+                <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
+              </div>
           </div>
-          <div class="contents">
-            <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
-            <div class="icons clearfix">
-              <span><img src="images/retweet.png" alt="retweet"></span>
-              <span><img src="images/heart.png" alt="heart"></img></span>
-              <span><img src="images/comment.png"></span>
-              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
-            </div>
-            <div class="contents__text">ここにテキストが入ります</div>
-            <div class="contents__tag-box">
-              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
-            </div>
+            <div class="contents">
+              <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
+              <div class="icons clearfix">
+                <span><img src="images/retweet.png" alt="retweet"></span>
+                <span><img src="images/heart.png" alt="heart"></img></span>
+                <span><img src="images/comment.png"></span>
+                <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
+              </div>
+              <div class="contents__text">ここにテキストが入ります</div>
+              <div class="contents__tag-box">
+                <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
+              </div>
           </div>
-          <div class="contents">
-            <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
-            <div class="icons clearfix">
-              <span><img src="images/retweet.png" alt="retweet"></span>
-              <span><img src="images/heart.png" alt="heart"></img></span>
-              <span><img src="images/comment.png"></span>
-              <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
-            </div>
-            <div class="contents__text">ここにテキストが入ります</div>
-            <div class="contents__tag-box">
-              <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
-            </div>
+            <div class="contents">
+              <a href="show.html"><img src="images/cat.jpg" alt="cat" width="100%"></a>
+              <div class="icons clearfix">
+                <span><img src="images/retweet.png" alt="retweet"></span>
+                <span><img src="images/heart.png" alt="heart"></img></span>
+                <span><img src="images/comment.png"></span>
+                <span class="icons-right"><i class="fas fa-ellipsis-h"></i></span>
+              </div>
+              <div class="contents__text">ここにテキストが入ります</div>
+              <div class="contents__tag-box">
+                <span class="tag"><i class="fas fa-hashtag tag__icon"></i><i class="tag__text">タグ名</i></span>
+              </div>
+          </div>
           </div>
         </div>
       </main>
